# made_with_GenUI

./: .gitignore  README.md  compare.rs
aws_p_cloud_drive/: Cargo.toml  Region.md  TODO.md  TestIssues.md  conf.conf
aws_p_cloud_drive/resources/: app.rs
aws_p_cloud_drive/src/: app.rs  aws_structs.rs  commands.rs  lib.rs  main.rs  state.rs
aws_p_cloud_drive/src/components/: body.rs  header.rs  main_view.rs  mod.rs  personal_view.rs  tools.rs
aws_p_cloud_drive/src/utils/: aws_structs.rs  commands.rs  mod.rs  state.rs
aws_p_cloud_drive/src/views/: bucket_page.rs  main_page.rs  mod.rs  settings_page.rs  sigin_page.rs  start_page.rs  upload_page.rs
aws_s3_cloud_drive/: Cargo.toml  README.md  TODO.md  app_icon.rc  share.cache
aws_s3_cloud_drive/packaging/before-packaging-command/src/: main.rs
aws_s3_cloud_drive/src/: app.rs  lib.rs  main.rs
aws_s3_cloud_drive/src/utils/: aws_structs.rs  commands.rs  lifetime.rs  mod.rs  state.rs  thread.rs
aws_s3_cloud_drive/src/views/: bucket_page.rs  main_page.rs  mod.rs  settings_page.rs  sigin_page.rs  start_page.rs  upload_page.rs
c_ref_test/: .ract  Cargo.toml
c_ref_test/c_ref/: .gen_ui_cache  Cargo.toml  gen_ui.toml
c_ref_test/c_ref/components/: header.gen
c_ref_test/c_ref/views/: define.gen  hello.gen  mod.gen  root.gen
components_test/: .ract  Cargo.toml
components_test/src/: app copy.rs  app.rs  lib.rs  main.rs  new_page.rs
for_test/: .ract  Cargo.toml
for_test/fors/: Cargo.toml  gen_ui.toml
for_test/fors/components/: easy.gen  hello.gen
for_test/fors/views/: home.gen  mod.gen  nested.gen  root.gen
lifetime/: Cargo.toml  LICENSE  app_icon.rc  build.rs
lifetime/resource/: test.html
lifetime/src/: app.rs  lib.rs  main.rs  page_a.rs  state.rs
macro_test/: Cargo.toml  code.md
macro_test/src/: app.rs  events.rs  lib.rs  main.rs  test1.rs
pixel_game/: rust_pixel实现方式.md
quick/: .ract
quick/hello/: gen_ui.toml
quick_start/: .ract  Cargo.toml
quick_start/quick_start/: Cargo.toml  gen_ui.toml
quick_start/quick_start/views/: home.gen
quickstart/: .ract  Cargo.toml  LICENSE  README.md
quickstart/hello/: Cargo.toml  gen_ui.toml
quickstart/hello/views/: home.gen
quickstart/start/: .gen_ui_cache  Cargo.toml  gen_ui.toml
quickstart/start/views/: home.gen  root.gen
setting_page/: .ract  Cargo.toml  README.md
setting_page/start/: .gen_ui_cache  Cargo.toml  gen_ui.toml
setting_page/start/views/: home.gen
tests/: .ract  Cargo.toml  LICENSE  README.md
tests/c_ref/: Cargo.toml  gen_ui.toml
tests/c_ref/views/: home.gen
tests/components/: Cargo.toml  define_component.gen  easy.gen  gen_ui.toml  single_sc.gen  styles.gen  template_sc.gen  template_style.gen
tests/for_sugar/: Cargo.toml  gen_ui.toml
tests/for_sugar/components/: easy.gen  hello.gen
tests/for_sugar/views/: home.gen  mod.gen
tests/if_sugar/: .gen_ui_cache  Cargo.toml  gen_ui.toml
tests/if_sugar/components/: mod.gen
tests/if_sugar/views/: home.gen  if_all_multi.gen  if_else.gen  if_else_and_if_else.gen  if_else_if.gen  if_else_if_else.gen  if_if_else.gen  if_multi_else_if.gen  if_nested.gen  mod.gen  multi_if.gen  root.gen
tests/lifecycle/: .gen_ui_cache  Cargo.toml  gen_ui.toml
tests/lifecycle/components/: hello.gen
tests/lifecycle/views/: home.gen
tests/quickstart/: Cargo.toml  gen_ui.toml
tests/router/: .gen_ui_cache  Cargo.toml  gen_ui.toml  router.toml
tests/router/components/: easy.gen
tests/router/router/: mod.gen  my_router.gen
tests/router/views/: about.gen  home.gen  login.gen  mod.gen  root.gen
tests/router_tabbar/: .gen_ui_cache  Cargo.toml  gen_ui.toml  router.toml
tests/router_tabbar/views/: mod.gen  register.gen
tests/settings/: .gen_ui_cache  gen_ui.toml
tests/settings/views/: root.gen
tests/todo/: .gen_ui_cache  Cargo.toml  gen_ui.toml
tests/todo/.plugins/tmp/: gen_plugin.dylib
tests/todo/src/: main.rs
tests/todo/views/: mod.gen  root.gen  todo_list.gen
tests/views/: home.gen  root.gen  tag.gen
todo/todo_back_end/: Cargo.toml
todo/todo_back_end/src/: main.rs
todo/todo_front/: .ract  Cargo.toml  README.md
todo/todo_front/todo/: .gen_ui_cache  Cargo.toml  gen_ui.toml  router.toml
todo/todo_front/todo/.plugins/gen_makepad_http/: token.toml
todo/todo_front/todo/.plugins/tmp/: gen_plugin.dylib  gen_plugin.rs
todo/todo_front/todo/components/: hello.gen
todo/todo_front/todo/views/: header.gen  mod.gen  root.gen  todo_list.gen
wiki/: app_dev_suggestions_en.md  app_dev_suggestions_zh.md  build_exe_with_icon.md
