[package]
name = "aws_p_cloud_drive"
version = "0.1.0"
edition = "2021"

[dependencies]
makepad-widgets = { path = "E:/Rust/try/makepad/makepad/rik/makepad/widgets", version = "0.6.0" }
gen_components = { path = "E:/Rust/try/makepad/Gen-UI/gen/components" }
serde_json = "1.0.128"
dirs-next = "2.0.0"
lazy_static = "1.5.0"
