[package]
name = "aws_s3_cloud_drive"
version = "0.1.0"
edition = "2021"

[dependencies]
makepad-widgets = { path = "/Users/shengyifei/projects/makepad/makepad/widgets", version = "0.6.0" }
gen_components ={ path="/Users/shengyifei/projects/gen_ui/components" }
regex = "1.10.6"
dirs-next = "2.0.0"
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
chrono = "0.4.38"
arboard = "3.4.1"
