[package]
name = "aws_s3_cloud_drive"
version = "0.0.1-pre"
edition = "2021"
authors = ["Will Sheng <syf20020816@outlook.com>"]
description = "A simple AWS S3 cloud drive client"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Privoce/made_with_GenUI/tree/main/aws_s3_cloud_drive"
keywords = ["aws", "s3", "cloud", "client", "makepad"]

[dependencies]
makepad-widgets = { path = "/Users/shengyifei/projects/makepad/makepad/widgets", version = "0.6.0" }
gen_components ={ path="/Users/shengyifei/projects/gen_ui/components" }
regex = "1.10.6"
dirs-next = "2.0.0"
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
chrono = "0.4.38"
arboard = "3.4.1"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
name = "GenUI Cloud Drive"
authors = ["Will Sheng <syf20020816@outlook.com>"]
identifier = "com.privoce"
icons = ["./resources/32x32.jpg", "./resources/128x128.jpg"]
version = "0.0.1"
resources = [
    { src = "./dist/resources/makepad_widgets", target = "makepad_widgets" },
    { src = "./dist/resources/gen_components", target = "gen_components" },
    "resources"
]
copyright = "Copyright 2023-2024, Privoce.Inc"
category = "Productivity"
license_file = "LICENSE"
out_dir = "./dist"

[package.metadata.packager.macos]
minimum_system_version = "11.0" 
