[package]
name = "components_test"
version = "0.1.0"
edition = "2021"
description = "This project is created by ract. Repo: https://github.com/Privoce/GenUI"
license = "MIT"
keywords = ["front_end", "ui"]

[dependencies]
makepad-widgets = { path = "/Users/shengyifei/projects/makepad/makepad/widgets" }
gen_components = {path = "/Users/shengyifei/projects/gen_ui/components"}