[package]
name = "macro_test"
version = "0.1.0"
edition = "2021"

[dependencies]
makepad-widgets = { path = "/Users/shengyifei/projects/makepad/makepad/widgets", version = "0.6.0" }
gen_components = { path = "/Users/shengyifei/projects/gen_ui/components" }
gen_macros = { path = "/Users/shengyifei/projects/gen_ui/GenUI/gen/macros" }

# [[bin]]
# name = "test1"
# path = "src/events.rs"