[package]
name = "todo"
version = "0.1.0"
edition = "2021"
description = "This project is created by ract. Repo: https://github.com/Privoce/GenUI"
license = "MIT"
keywords = ["front_end", "ui"]

[dependencies]
gen_macro = { path = "/Users/shengyifei/projects/gen_ui/GenUI/gen/middleware/plugins/macro" }
serde = "1.0.217"
lazy_static = "1.5.0"
serde_json = "1.0.135"